<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_topHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:transitionName="img_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/transcribeIt"
            android:textColor="@color/textColor"
            android:textSize="35sp"
            android:transitionName="text_logo" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_topHeader"
        android:background="@drawable/background_bottom"
        android:contentDescription="@string/app_name"
        android:transitionName="img_tree" />

    <LinearLayout
        android:id="@+id/login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/let_s_get_started"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/login_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="15dp" />
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/login_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:padding="15dp" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:id="@+id/login_btnForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:text="@string/forgot_password"
            android:textColor="@color/textColor" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/login_btnSignin"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:neumorph_shapeType="flat" />

        <LinearLayout
            android:id="@+id/login_btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"

                android:textColor="@color/textColor" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>