<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical"
    tools:context=".ConfirmSignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="@drawable/ic_back_ios"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_account"
                android:textColor="@color/textColor"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/space_confirm_1"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/confirmSignUp_confirmationCodeStatement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/a_confirmation_code_was_sent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <Space
                android:id="@+id/space_confirm_1B"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewConfirmSubtext_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/please_enter_the_code_below_to_confirm_your_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:neumorph_shapeType="pressed">


                <EditText
                    android:id="@+id/confirmSignUp_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="15dp" />

            </soup.neumorphism.NeumorphCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                android:text="@string/confirmation_code"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <com.chaos.view.PinView
                android:id="@+id/confirmSignUp_confirmCode"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:cursorVisible="true"
                android:inputType="phone"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/textColor"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="15dp"
                app:itemWidth="40dp"
                app:lineColor="@color/textColor"
                app:lineWidth="1dp"
                app:viewType="rectangle" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/confirmSignUp_btnConfirm"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:neumorph_shapeType="flat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/confirmSignUp_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/confirmSignUp_btnSendCodeAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:enabled="false"
                    android:text="@string/resend_code"

                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>