<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:scaleType="fitXY"
            android:background="@drawable/ic_back_ios"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textColor="@color/textColor"
                android:textSize="40sp"
                android:textStyle="bold" />

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/register_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/fullName"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:neumorph_shapeType="pressed">


                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:padding="15dp"
                        android:inputType="textPassword"
                        android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                        android:longClickable="false"/>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:neumorph_shapeType="pressed">

                <RadioGroup
                    android:id="@+id/register_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/register_individual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/individual"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/register_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/company"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />


                </RadioGroup>

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/register_btnRegister"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:neumorph_shapeType="flat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/register_btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>