<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="@drawable/ic_back_ios"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/change_passowrd"
                android:textColor="@color/textColor"
                android:textSize="35sp"
                android:textStyle="bold" />


            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:neumorph_shapeType="pressed">


                <EditText
                    android:id="@+id/changePassword_OldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                    android:hint="@string/old_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:padding="15dp" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:neumorph_shapeType="pressed">


                <EditText
                    android:id="@+id/changePassword_NewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                    android:hint="@string/new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:padding="15dp" />

            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphButton
                android:id="@+id/changePassword_btnChangePassword"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/change_passowrd"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:neumorph_shapeType="flat" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>